--- a/package.json
+++ b/package.json
@@ -1,10 +1,19 @@
 {
 	"name": "EBNF-Lint",
 	"description": "EBNF syntax checker",
+	"version": "0.0.1",
 	"dependencies": {
-		"pegjs": "*"
+		"pegjs": "0.7.*",
+		"commander": "1.1.*"
+	},
+	"devDependencies": {
+		"mocha": "1.10.*"
 	},
 	"engines": {
 		"node": ">= 0.4"
+	},
+	"scripts": {
+		"test": "mocha -R list",
+		"compile": "pegjs --track-line-and-column lib/parser.pegjs lib/parser.js"
 	}
 }
