--- a/package.json
+++ b/package.json
@@ -3,11 +3,12 @@
 	"description": "EBNF syntax checker",
 	"version": "0.0.1",
 	"dependencies": {
-		"pegjs": "0.7.*",
 		"commander": "1.1.*"
 	},
 	"devDependencies": {
-		"mocha": "1.10.*"
+		"mocha": "1.10.*",
+		"pegjs": "0.7.*",
+		"should": "1.2.*"
 	},
 	"engines": {
 		"node": ">= 0.4"
