--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
 	"name": "EBNF-Lint",
 	"description": "EBNF syntax checker",
-	"version": "0.0.4",
+	"version": "0.1.0",
 	"dependencies": {
 		"commander": "~2"
 	},
 	"devDependencies": {
 		"mocha": "~3.1",
-		"pegjs": "~0.9",
+		"pegjs": "~0.10",
 		"should": "~11.1"
 	},
 	"engines": {
@@ -15,6 +15,6 @@
 	},
 	"scripts": {
 		"test": "mocha",
-		"compile": "pegjs --track-line-and-column lib/parser.pegjs lib/parser.js"
+		"compile": "pegjs -o lib/parser.js lib/parser.pegjs"
 	}
 }
